Add request id to logs